# ComfyUI-Liebs-Picker

./: Fix README.md bad table syntax  README.md  __init__.py  liebs_picker.py  pyproject.toml
docs/workflows/: LiebsPickerSEGS.json
js/: ImageList.js  ImageListImageElement.js  Segments.js  picker-extension.js  styles.css
js/element/: BBoxElement.js  BBoxOverlayElement.js  ImageListImageElement.js
js/modal/: BaseModal.js  GridModal.js  ZoomModal.js
