[project]
name = "liebs-picker"
description = "A node to pause execution of the workflow and select which input images should proceed to the output."
version = "1.2.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/marklieberman/ComfyUI-Liebs-Picker"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "markliebs"
DisplayName = "ComfyUI-Liebs-Picker"
Icon = "https://raw.githubusercontent.com/marklieberman/ComfyUI-Liebs-Picker/refs/heads/main/comfy-icon.png"
